--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ strum = "0.18.0"
 strum_macros = "0.18.0"
 serde = "1"
 serde_derive = "1"
-wasm-bindgen = "0.2.64"
+wasm-bindgen = "0.2.65"
 wasm-logger = "0.2"
 wee_alloc = { version = "0.4.5", optional = true }
 yew = "0.17.2"
+yew-router = "0.14.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
