--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,29 @@
 [package]
 name = "yew-address-book-client"
 version = "0.1.0"
-authors = ["SakaDream <bahaimt@gmail.com>"]
+authors = ["Hai Phan <bahaimt@gmail.com>"]
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-log = "0.4"
-strum = "0.18.0"
-strum_macros = "0.18.0"
-serde = "1"
-serde_derive = "1"
-wasm-bindgen = "0.2.65"
-wasm-logger = "0.2"
+log = "0.4.11"
+strum = "0.20.0"
+strum_macros = "0.20.1"
+serde = "1.0.118"
+serde_derive = "1.0.118"
+wasm-bindgen = "0.2.69"
+wasm-logger = "0.2.0"
 wee_alloc = { version = "0.4.5", optional = true }
-yew = "0.17.2"
+yew = "0.17.4"
 yew-router = "0.14.0"
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3"
+wasm-bindgen-test = "0.3.19"
 
 [dependencies.web-sys]
-version = "0.3.41"
+version = "0.3.46"
 features = [
   'KeyboardEvent',
 ]
