--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ wasm-logger = "0.2.0"
 wee_alloc = { version = "0.4.5", optional = true }
 yew = "0.17.4"
 yew-router = "0.14.0"
+anyhow = "1.0.38"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.20"
