--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,29 +2,29 @@
 name = "yew-address-book-client"
 version = "0.1.0"
 authors = ["Hai Phan <bahaimt@gmail.com>"]
-edition = "2018"
-
-[lib]
-crate-type = ["cdylib", "rlib"]
+edition = "2021"
 
 [dependencies]
-log = "0.4.14"
-strum = "0.20.0"
-strum_macros = "0.20.1"
-serde = "1.0.123"
-serde_derive = "1.0.123"
+weblog = "0.3.0"
+console_error_panic_hook = "0.1.7"
+strum = "0.23.0"
+strum_macros = "0.23.1"
+serde = { version = "1.0.136", features = ["derive"] }
 wasm-bindgen = "0.2.70"
 wasm-logger = "0.2.0"
 wee_alloc = { version = "0.4.5", optional = true }
-yew = "0.17.4"
-yew-router = "0.14.0"
-anyhow = "1.0.38"
+yew = "0.19.3"
+yew-router = "0.16.0"
+yew-hooks = "0.1.25"
+anyhow = "1.0.53"
+reqwasm = "0.4.0"
+chrono = "0.4.19"
 
 [dev-dependencies]
-wasm-bindgen-test = "0.3.20"
+wasm-bindgen-test = "0.3.29"
 
 [dependencies.web-sys]
-version = "0.3.47"
+version = "0.3.56"
 features = [
   'KeyboardEvent',
 ]
