--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start:dev": "webpack-dev-server --mode development"
+  "name": "yew-address-book-client",
+  "version": "1.0.0",
+  "description": "An Address Book frontend using yew",
+  "main": "server/index.js",
+  "directories": {
+    "test": "tests"
   },
-  "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.3.1",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^3.6.0",
-    "sass": "^1.26.9",
-    "sass-loader": "^9.0.1",
-    "style-loader": "^1.2.1",
-    "wasm-pack": "^0.9.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  }
+  "scripts": {
+    "test": "cargo test",
+    "build": "trunk build",
+    "build-release": "trunk build --release",
+    "serve": "trunk serve",
+    "start-server": "nodemon server/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SakaDream/yew-address-book-client.git"
+  },
+  "author": "SakaDream",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/SakaDream/yew-address-book-client/issues"
+  },
+  "homepage": "https://github.com/SakaDream/yew-address-book-client#readme"
 }
