--- a/.github/workflows/ci_action.yml
+++ b/.github/workflows/ci_action.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           target: wasm32-unknown-unknown
 
       - name: Install trunk-cli
@@ -76,6 +77,7 @@ jobs:
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           target: wasm32-unknown-unknown
 
       - name: Install trunk-cli
@@ -139,6 +141,7 @@ jobs:
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           target: wasm32-unknown-unknown
 
       - name: Install trunk-cli
