--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "trunk build",
     "build-release": "trunk build --release",
     "serve": "trunk serve",
-    "start-server": "nodemon server/index.js"
+    "start-server": "nodemon server/index.js",
+    "start-server-local": "set NODE_ENV=local&&nodemon server/index.js",
+    "start-server-stg": "set NODE_ENV=stg&&nodemon server/index.js",
+    "start-server-prod": "set NODE_ENV=prod&&nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +25,6 @@
   "bugs": {
     "url": "https://github.com/SakaDream/yew-address-book-client/issues"
   },
-  "homepage": "https://github.com/SakaDream/yew-address-book-client#readme"
+  "homepage": "https://github.com/SakaDream/yew-address-book-client#readme",
+  "dependencies": {}
 }
