--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "build": "trunk build",
     "build-release": "trunk build --release",
     "serve": "trunk serve",
-    "start-server": "nodemon server/index.js",
+    "start-server": "set NODE_ENV=development&&nodemon server/index.js",
     "start-server-local": "set NODE_ENV=local&&nodemon server/index.js",
-    "start-server-stg": "set NODE_ENV=stg&&nodemon server/index.js",
+    "start-server-stg": "set NODE_ENV=staging&&nodemon server/index.js",
     "start-server-prod": "set NODE_ENV=prod&&nodemon server/index.js"
   },
   "repository": {
